# ign-inf-unlearning

./: .gitignore  README.md  WMDP_EXTRACTION.md  main.py  paths.py  pyproject.toml
experiments/notebooks/: test.ipynb  wmdp-forget-mcqa.ipynb
scripts/extraction/: __init__.py  extract_activations.py  extract_wmdp_activations.py
scripts/probes/: compare_probe_results.py  reevaluate_probes_with_auroc.py  train_probes.py
src/ign_inf_unlearning/analysis/: visualization.py
src/ign_inf_unlearning/models/: __init__.py  activations.py  probes.py
src/ign_inf_unlearning/rewrite_questions_batchapi/: cancel_batch.py  check_batch_status.py  filter_batch_outputs.py  get_list_of_batches.py  join_outputs_to_csv.py  jsonl_validator.py  make_batch_input.py  make_batchinput_reasoning.py  retrieve_results.py  upload_batch_inputs.py
